# ansible-role-thales-hsm

./: .ansible-lint  .gitreview  AUTHORS  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  vars.yaml.sample
defaults/: main.yaml
files/: add_ips.py
handlers/: main.yaml
meta/: main.yaml
releasenotes/notes/: add-ha-c41f45eaa1aba077.yaml  add-support-for-security-world-v13.4-2cb8688bcc072db1.yaml
tasks/: client.yaml  client_enroll.yaml  main.yaml  rfs.yaml  rfs_register_client.yaml
templates/: cknfastrc.j2
