[metadata]
name = ansible-role-thales-hsm
summary = ansible-role-thales-hsm - Ansible role to configure Thales HSM clients.
description-file =
    README.md
author = TripleO Team
author-email = alee@redhat.com
home-page = https://github.com/dmend/ansible-role-thales-hsm
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/thales-hsm/defaults = defaults/*
    share/ansible/roles/thales-hsm/meta = meta/*
    share/ansible/roles/thales-hsm/tasks = tasks/*
    share/ansible/roles/thales-hsm/templates = templates/*
    share/ansible/roles/thales-hsm/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
