[metadata]
name = ansible-role-thales-hsm
summary = ansible-role-thales-hsm - Ansible role to configure nShileld Connect HSM clients.
description-file =
    README.rst
author = TripleO Team
author-email = alee@redhat.com
home-page = https://opendev.org/openstack/ansible-role-thales-hsm
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/thales_hsm/defaults = defaults/*
    share/ansible/roles/thales_hsm/meta = meta/*
    share/ansible/roles/thales_hsm/tasks = tasks/*
    share/ansible/roles/thales_hsm/templates = templates/*
    share/ansible/roles/thales_hsm/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
